@@ -1,0 +1,9 @@
+#! /bin/sh
+
+dir=`dirname $0`
+
+# We change the "Command:" so it doesn't get stripped out by the standard
+# filters.
+sed "s/Command:/COMMAND:/" |
+
+./filter_stderr
