@@ -15,6 +15,10 @@ perl -p -e 's/(==|--|\+\+|\*\*)[0-9]{1,7}\1 //' |
 # Remove any --pid:0: strings (debuglog level zero output)
 sed "/^--[0-9]\{1,7\}:0:*/d" |
 
+# Remove "Command: line".  (If wrapping occurs, it won't remove the
+# subsequent lines...)
+sed "/^Command: .*$/d" |
+
 # Remove "WARNING: assuming toc 0x.." strings
 sed "/^WARNING: assuming toc 0x*/d" |
 
